# polyglot-detect-mcp

./: main.py  pyproject.toml
fasttext_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
